--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,24 +1,22 @@
-<div class="row">
-    <form class="col s8" [formGroup]="loginForm" (ngSubmit)="login()">
-      <div class="row">
-        <div class="input-field col s6">
+<div class="row valign-wrapper center-align my-wrapper">  
+  
+    <form class="col s8" [formGroup]="loginForm" (ngSubmit)="login()">      
+      <!-- <div class="row center-align"><div class="col s6"><h1>Login</h1></div></div> -->
+      <div class="row margin-rows">
+        <div class="input-field ">
           <i class="material-icons prefix">account_circle</i>
-          <input id="icon_prefix" type="text" class="validate" formControlName="userName">
-          <label for="icon_prefix">User Name</label>
+          <input id="icon_prefix" type="text" class="validate" formControlName="userName" placeholder="Username">
         </div>
     </div>
-    <div class="row">
-        <div class="input-field col s6">
+    <div class="row margin-rows">
+        <div class="input-field ">
           <i class="material-icons prefix">lock</i>
-          <input id="lock" type="password" class="validate" formControlName="password">
-          <label for="lock">Password</label>
+          <input id="lock" type="password" class="validate" formControlName="password" placeholder="Password">
         </div>
       </div>
-      <div class="row">
-        <div class="input-field col s3">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-              </button>
+      <div class="row center-align submitBuuton">
+        <div class="input-field ">
+            <button class="btn waves-effect waves-light button-background" type="submit" name="action">Submit</button>
         </div>
       </div>
     </form>
