--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { background-color:#31393c; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-* {
-	margin: 0;
-	padding: 0;
-	background-color: #000000;
-	color: #fff;
-}
 
-.signform {
-	text-transform: capitalize;
-	padding: 10%;
-}
+.mat-form-field {
+    margin-right: 8px;
+  }
 
-.second {
-	text-transform: capitalize;
-	padding: 7%;
-	color: white !important;
-}
+  .mat-snack-bar-container{
+    background-color: #3ab57d;
+  }
 
-.browser-default {
-	color: black;
-}
-
-.summery {
-	text-transform: capitalize;
-	padding: 3%;
-}
-
-li {
-	list-style: none;
-}
