--- a/src/app/components/home/edit-location-dialog.html
+++ b/src/app/components/home/edit-location-dialog.html
@@ -2,8 +2,7 @@
   min-width: 250px;
   padding-top: 10px;'>
     <p>Edit the location of selected Schedule.</p>
-    <mat-form-field appearance="fill">
-      <mat-label>Edit the location of selected Schedule</mat-label>
+    <mat-form-field appearance="fill" style="width: 100%;">
       <textarea matInput [(ngModel)]="data.location"></textarea>
     </mat-form-field>
     <!-- <mat-form-field>
