--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,10 @@
- .signform {
+mat-progress-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.signform {
   text-transform: capitalize;
   padding: 8% 7% 0% 6%;
   height: 100vh;
@@ -67,7 +73,7 @@
   font-size: 14px;
   margin-right:5px;
  }
- 
+
  .endTime
  {
   font-weight: 500;
@@ -84,7 +90,7 @@
   width: 44px!important;
   border-bottom: 0!important;
   color: #000;
-  
+
 }
  .location{
   display: flex;
@@ -106,7 +112,7 @@
  }
 .ownDeleteBtn
 {
- 
+
   outline: none;
   color: white;
 
@@ -114,7 +120,7 @@
 }
 .ownAddImg
 {
-  
+
   background-color: #7375f8;
   position: fixed;
   bottom: 20px;
@@ -451,14 +457,38 @@ button.mat-focus-indicator.location.btn.mat-fab.mat-button-base.mat-accent .ownP
   /* box-shadow: 3px 5px #0a0a0a; */
 }
 
+.ownPick {
+  background: transparent;
+}
+
 .disabledInput{
   pointer-events: none;
  }
 .locationeditField{
 display: flex;
 }
+.locationeditbutton{
+  outline: none;
+  background-color: transparent;
+}
+/* ::ng-deep .cdk-overlay-pane{
+  width:650px!important
+} */
+.shiftdate .shiftDateButton {
+      background: #6b52f8!important
+}
+.shiftdate .shiftDateButton:focus {
+      background: #6b52f8!important
+}
+.locationArea{
+  cursor: pointer;
+  color: white;
+  font-style: italic;
+}
 .ownPoisitionRelative
 {
+  margin-top: 0px!important;
+  margin-bottom: 0px!important;
   position: relative;
 }
 button.mat-focus-indicator.location.btn.mat-fab.mat-button-base.mat-accent:hover {
@@ -567,6 +597,7 @@ select {
   margin-top: 0px;
   margin-bottom: 0px;
   height: 75px;
+  min-height: 53px;
   border-radius: 5px;
   font-size: 14px;
   padding: 5px;
@@ -590,6 +621,56 @@ select {
   position: relative!important;
   height:57px
 }
+.locationSelectorBox{
+  display:flex
+}
+.locationSelectorBox button{
+  margin:5px
+}
+.fadeOnSwitch {
+  -webkit-animation: fadein 1.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1.5s; /* Firefox < 16 */
+   -ms-animation: fadein 1.5s; /* Internet Explorer */
+    -o-animation: fadein 1.5s; /* Opera < 12.1 */
+       animation: fadein 1.5s;
 
+}
+::ng-deep [type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:after {
+    background-color: #6b52f8;
+}
+::ng-deep [type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
+    border: 2px solid #6b52f8;
+}
+/* .animatebox {
+  transition: visibility 0s, opacity 0.5s linear;
+  background: #5FCF80!important;
+  width: 500px;
+} */
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
