--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,14 +5,14 @@
       <div class="row">
         <div class="col s12 m6">
           <div style="margin-left: 20px; color: #fff; ">
-            <h2 class="contentHeading">Hello, Joe</h2>
+            <h2 class="contentHeading">Hello, {{username}}</h2>
             <p class="contentHeadingParah">Plan a shift by filling in the following details:</p>
           </div>
         </div>
         <div class="col s12 m6 right-align">
 
           <button class="btn waves-effect waves-light button-next" type="submit" name="action" (click)="step=2"
-            [disabled]="!shiftInfoForm.valid"><i class="material-icons right next-button">forward</i>Next</button>
+            [disabled]="shiftInfoForm.valid"><i class="material-icons right next-button">forward</i>Next</button>
         </div>
       </div>
       <div class="header">
@@ -20,27 +20,30 @@
         <span class="indicator" (click)="shiftInfoForm.valid ? step=2: return;"></span>
         <span class="indicator" (click)="signatureForm.valid ? step=3: return;"></span>
       </div>
-      <form [formGroup]="shiftInfoForm">
+      <form [formGroup]="shiftInfoForm" class="fadeOnSwitch">
         <div class="pl-0">
           <div class="col-md-9">
             <div class="row">
               <div class="form-group col-md-4 pr-1">
                 <label class="label-class required ownHeading">Shift’s Sector</label>
-                <select formControlName="division" class="browser-default">
-                  <option value="" selected disabled>Choose divison</option>
-                  <option value="division1">Division 1</option>
-                  <option value="division2">Division 2</option>
-                  <option value="division3">Division 3</option>
-                </select>
+                <input type="text" formControlName="division"  class="form-control" placeholder="Division" [matAutocomplete]="auto"
+                  required>
+
+                <mat-autocomplete #auto="matAutocomplete">
+                  <mat-option *ngFor="let div of filteredDivision | async; let i= index" [value]="div">
+                    {{div}}
+                  </mat-option>
+                </mat-autocomplete>
               </div>
               <div class="form-group col-md-4 pr-1">
                 <label style="visibility: hidden;" class="label-class required ownHeading"></label>
-                <select formControlName="npc" class="browser-default">
-                  <option value="" disabled selected>Choose NPC</option>
-                  <option value="npc1">NPC 1</option>
-                  <option value="npc2">NPC 2</option>
-                  <option value="npc3">NPC 3</option>
-                </select>
+                <input type="text" formControlName="npc" class="form-control" placeholder="NPC" [matAutocomplete]="npc"
+                  required>
+                <mat-autocomplete #npc="matAutocomplete">
+                  <mat-option *ngFor="let npc of filteredNPC | async; let i= index" [value]="npc">
+                    {{npc}}
+                  </mat-option>
+                </mat-autocomplete>
               </div>
             </div>
             <div class="row">
@@ -64,13 +67,11 @@
             <div class="row">
               <div class="form-group col-md-4 pr-1">
                 <label class="label-class required ownHeading">Sector</label>
-                <input type="text" formControlName="sector" name="Name" class="form-control" placeholder="sector"
-                  required>
+                <input type="text" formControlName="sector" name="Name" class="form-control" placeholder="sector" required>
               </div>
               <div class="form-group col-md-4 pr-1">
                 <label class="label-class required ownHeading">Call sign</label>
-                <input type="text" formControlName="callSign" name="Name" class="form-control" placeholder="call sign"
-                  required>
+                <input type="text" formControlName="callSign" name="Name" class="form-control" placeholder="call sign" required>
               </div>
             </div>
             <div class="row">
@@ -91,6 +92,24 @@
                 </div>
               </div>
             </div>
+          <div class="row">
+            <div class="form-group col-md-4 pr-1 shiftdate">
+              <label class="label-class required ownHeading">Date</label>
+              <input type="text" placeholder="Choose Date" formControlName="shiftDate" matInput [matDatepicker]="picker" class="form-control" required>
+              <mat-datepicker #picker></mat-datepicker>
+              <button mat-raised-button class="shiftDateButton" (click)="picker.open()">Choose Date</button>
+            </div>
+              
+          </div>
+  <!-- <div class="form-group col-md-4 pr-1">
+                      <label class="label-class required ownHeading">Call sign</label>
+                      <input >
+                    </div> -->
+  <!-- <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field> -->
           </div>
         </div>
       </form>
@@ -125,7 +144,7 @@
       <div class="row">
         <div class="col s12 m6">
           <div style="margin-left: 10px; color: #fff; ">
-            <h2 class="contentHeading">Hello, Joe</h2>
+            <h2 class="contentHeading">Hello, {{username}}</h2>
             <p class="contentHeadingParah">Plan a shift by filling in the following details:</p>
           </div>
         </div>
@@ -155,10 +174,10 @@
               </g>
             </svg>
           </span>
-          <span> 
+          <span>
             <!-- <i class="material-icons right next-button">leftarrow</i> -->
             <button class="btn waves-effect waves-light button-next" type="submit" name="action"
-              [disabled]="!shitScheduleForm.valid" (click)="step=3"><i
+              [disabled]="!shiftScheduleForm.valid" (click)="step=3"><i
                 class="material-icons right next-button">forward</i>Next</button>
             <!-- <img src="../../../assets/img/next.svg" (click)="nextButton('2')" class="arrowsvg"> -->
           </span>
@@ -167,17 +186,17 @@
       <div class="header">
         <span class="indicator" (click)="step= 1"></span>
         <span class="indicator active"></span>
-        <span class="indicator" (click)="shitScheduleForm.valid ? step=3: return;" disabled></span>
+        <span class="indicator" (click)="shiftScheduleForm.valid ? step=3: return;" disabled></span>
       </div>
       <div class="table-responsive scheduleTable">
-        <form [formGroup]="shitScheduleForm" novalidate>
+        <form [formGroup]="shiftScheduleForm" class="fadeOnSwitch" novalidate>
           <table formArrayName="schedules" class="table">
             <thead>
               <tr>
                 <th class=""></th>
                 <th class="">SR.No.</th>
                 <th class="pl-5">Time</th>
-                <th class="pl-4 required">Location</th>
+                <th class="pl-4">Location</th>
                 <th class="required">Specific Purpose</th>
                 <th>Reason For Deviation</th>
               </tr>
@@ -185,10 +204,10 @@
 
             <tbody>
               <tr [formGroupName]="i"
-                *ngFor="let schedule of shitScheduleForm.controls.schedules.controls; let i=index">
+                *ngFor="let schedule of shiftScheduleForm.controls.schedules.controls; let i=index">
                 <td>
                   <button mat-fab [ngStyle]="{'visibility': i==0 ? 'hidden' : 'visible'}"[disabled]="i ==0" class="ownDeleteBtn"
-                    aria-label="Example icon button with a delete icon" (click)="removeShiftSchedule(i)">
+                    aria-label="Example icon button with a delete icon" (click)="openConfirmationDialog(i)">
 
                     <mat-icon *ngIf="i>0" color="primary">delete</mat-icon>
                   </button>
@@ -226,46 +245,53 @@
                   </mat-form-field> -->
 
 
+
+
                   <div style="display:flex;" *ngIf="schedule.controls.location.value!=''" class="locationeditField">
                     <!-- <mat-label style="cursor: pointer;"(click)="openMapDialog(i)">{{schedule.controls.location.value}}</mat-label> -->
-                    <textarea formControlName="location" (click)="openMapDialog(i)" type="text"readonly  matInput></textarea>
+                    <textarea formControlName="location"  class="locationArea" (click)="openSelectedMapLocation(i)" type="text"readonly  matInput></textarea>
                     <!-- <div style="position:absolute; left:0; right:0; top:0; bottom:0;"></div> -->
 
-                    <button mat-icon-button matSuffix (click)="openEditDialog(i,schedule.controls.location.value)" >
-                    <mat-icon class="locationediticon">edit</mat-icon>
+                    <button mat-icon-button matSuffix class="locationeditbutton" (click)="openEditDialog(i,schedule.controls.location.value)" >
+                    <mat-icon class="locationediticon" style="font-size: 30px;">edit</mat-icon>
                     </button>
                   </div>
-                  
+       
+
                   <!-- <textarea *ngIf="editLocation[i] != true"formControlName="location" *ngIf="schedule.controls.location.value!=''" class="browser-default mergetextarea locationTextArea"></textarea> -->
-                  
+
                   <!-- <mat-icon (click)="editLocation[i] = false" style="cursor: pointer;"*ngIf="schedule.controls.location.value !=''">edit</mat-icon> -->
-                  
-                  
-                  <button   mat-fab  *ngIf="schedule.controls.location.value==''" (click)="openMapDialog(i)"aria-label="Example icon button with a delete icon" class="location btn">
-                    <mat-icon color="">place</mat-icon>
-                    <span class="bg-purple ownPick">Pick</span>
-                  </button>
-                  
+
+                  <div class="locationSelectorBox" >
+                    
+                    <button   mat-fab  *ngIf="schedule.controls.location.value==''" (click)="openMapDialog(i)"aria-label="Example icon button with a delete icon" class="location btn">
+                      <mat-icon color="">place</mat-icon>
+                      <span class="ownPick">Pick</span>
+                    </button>
+                    <button   mat-fab  *ngIf="schedule.controls.location.value==''" (click)="openEditDialog(i,schedule.controls.location.value)" aria-label="Example icon button with a delete icon" class="location btn">
+                      <mat-icon color="">edit</mat-icon>
+                      <span class="ownPick">Type</span>
+                    </button>
+
+                  </div>
+
                   <!-- <app-map-dialog *ngIf="schedule.controls.location.value==''" (location)="addAddress($event,i)"></app-map-dialog> -->
                 </td>
                 <td>
                   <div class="input-field col s12 m6 pl-0 groupInputSelect ownPoisitionRelative">
-                    <textarea  formControlName="purpose" *ngIf="option[i]" placeholder="Type here.." class="browser-default mergetextarea ownTextArea"></textarea>
-                    <select formControlName="purpose" (change)='onOptionSelected(i,purpose.selectedIndex)'  [ngClass]="{'ownConditon':option[i]}"
-                    [ngStyle]="{'height': option[i] ? '30px' : '38px'}" 
+                    <textarea  *ngIf="option[i]"  placeholder="Type here.." class="browser-default mergetextarea ownTextArea" style="min-height: 53px;"></textarea>
+                    <select formControlName="purpose" (change)='onOptionSelected(i,purpose.selectedIndex,purposes)' [ngClass]="{'ownConditon':option[i]}"
+                    [ngStyle]="{'height': option[i] ? '30px' : '38px'}"
                     [class.text-dimmed]="true" #purpose class="browser-default ">
-                      <option value=""  disabled selected>Choose Purpose</option>
-                      <option value="purpose1">Purpose 1</option>
-                      <option value="purpose2">Purpose 2</option>
-                      <option value="purpose3">Purpose 3</option>
-                      <option value="purpose4">Purpose 4</option>
-                      <option value="">Other</option>
+                      <option [ngValue]="null"  disabled selected>Choose Purpose</option>
+                      <option *ngFor="let p of purposes" [ngValue]="p">{{p}}</option>
+                      <option [ngValue]="">Other</option>
                     </select>
                   </div>
                 </td>
                 <td>
                   <div class="input-field col s12 m-0 pl-0">
-                    <textarea formControlName="reasonDeviation" placeholder="Type here..."
+                    <textarea formControlName="reasonDeviation" style="min-height: 53px;" placeholder="Type here..."
                       class="ownTextArea"></textarea>
                   </div>
                 </td>
@@ -310,12 +336,12 @@
   <!-- =================================Third Slide============================ -->
 
   <section *ngSwitchCase="3">
+    <mat-progress-spinner *ngIf="isLoading" [color]="loadinColor" [mode]="loaderMode"></mat-progress-spinner>
     <div class="signform">
-
       <div class="row">
         <div class="col s12 m6">
           <div style="margin-left: 10px; color: #fff; ">
-            <h2 class="contentHeading">Hello, Joe</h2>
+            <h2 class="contentHeading">Hello, {{username}}</h2>
             <p class="contentHeadingParah">Plan a shift by filling in the following details:</p>
           </div>
         </div>
@@ -348,7 +374,7 @@
           </span>
           <span>
             <button class="btn waves-effect waves-light button-next" type="submit" name="action" (click)="submitShift()"><i
-                class="material-icons right next-button">forward</i>Finish</button>
+              class="material-icons right next-button">forward</i>Finish</button>
           </span>
         </div>
       </div>
@@ -358,7 +384,7 @@
         <span class="indicator active"></span>
       </div>
 
-      <div class="second">
+      <div class="second fadeOnSwitch" >
 
         <div class="row summery">
 
@@ -369,9 +395,9 @@
           </div>
           <div class="col-md-2">
             <div class="finish">
-              <h6 class="headingFinal">Shift Summery</h6>
-              <li><label>Divison</label><span>{{shiftInfoForm.controls.division.value}}</span></li>
-              <li><label>NPC</label><span>{{shiftInfoForm.controls.npc.value}}</span></li>
+              <h6 class="headingFinal">Shift Summary</h6>
+              <li><label>Divison</label><span>{{shiftInfoForm.controls.division.value ? shiftInfoForm.controls.division.value.Value : ''}}</span></li>
+              <li><label>NPC</label><span>{{shiftInfoForm.controls.npc.value ? shiftInfoForm.controls.npc.value.Value : ''}}</span></li>
               <li><label>Team</label><span>{{shiftInfoForm.controls.teamName.value}}</span></li>
               <li><label>Driver</label><span>{{shiftInfoForm.controls.driverName.value}}</span></li>
               <li><label>Petrolman</label><span>{{shiftInfoForm.controls.patrolMan.value}}</span></li>
@@ -383,15 +409,19 @@
           <div class="col-md-4">
             <div class="finish1">
               <h6 class="headingFinal">Schedule</h6>
-              <li *ngFor="let schedule of shitScheduleForm.controls.schedules.controls; let i=index"><label class="col-md-3 pl-0">{{schedule.controls.startTime.value}}-{{schedule.controls.endTime.value}}</label><span style="font-style: italic" class="col-md-9 pr-0">{{schedule.controls.location.value}}</span></li>
+              <li *ngFor="let schedule of shiftScheduleForm.controls.schedules.controls; let i=index"><label class="col-md-3 pl-0">{{schedule.controls.startTime.value}}-{{schedule.controls.endTime.value}}</label><span style="font-style: italic" class="col-md-9 pr-0">{{schedule.controls.location.value}}
+              <span style="word-break: break-word;">{{(schedule.controls.coordinates.value != undefined && schedule.controls.coordinates.value != '')? schedule.controls.coordinates.value : '' }}</span>
+              </span>
+              
+              </li>
             </div>
 
           </div>
 
           <div class="col-md-2">
-            <form [formGroup]="signatureForm" novalidate>
+            <form [formGroup]="signatureForm"  novalidate>
               <div class="col s12 m3 input-field own-signature-field">
-                <h6 class="headingFinal">Other Signature</h6>
+                <h6 class="headingFinal ownHeading">Other Signature</h6>
                 <!-- <span><img src="sign.png" width="100"></span><br> -->
 
                 <div>
@@ -401,16 +431,15 @@
 
                 <div _ngcontent-vbg-c46="" class="form-group mt-2">
                   <label _ngcontent-vbg-c46="" class="label-class required ownHeading">Team Name </label>
-                  <input _ngcontent-vbg-c46="" [(ngModel)]="shiftInfoForm.controls.teamName.value" formControlName="teamName" type="text" name="Name"
-                    placeholder="Team Name" autocomplete="on" required="" class="form-control"></div>
+                  <input _ngcontent-vbg-c46="" disabled style="background-color: #bdbdbd!important;"[(ngModel)]="shiftInfoForm.controls.teamName.value" formControlName="teamName" type="text" name="Name"
+                    placeholder="Team Name" autocomplete="on" required="" class="form-control">
+                </div>
 
                 <div class="form-group mt-2">
-                  <label class="headingFinal required">Rank </label>
+                  <label class="headingFinal required ownHeading">Rank </label>
                   <select class="browser-default" formControlName="rank">
-                    <option value="" disabled selected>Rank</option>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
-                    <option value="3">Option 3</option>
+                    <option [ngValue]="null" disabled selected>Rank</option>
+                    <option *ngFor="let r of ranks; let i= index" [ngValue]="r">{{r}}</option>
                   </select>
                 </div>
               </div>
