--- a/src/app/dialogs/confirmation/confirmation-dialog.html
+++ b/src/app/dialogs/confirmation/confirmation-dialog.html
@@ -11,7 +11,7 @@
   <mat-dialog-content style='background: #31393c;
   min-width: 300px;
   padding-top: 10px;'>
-<h3 mat-dialog-title>Delete, Are you sure ?</h3>
+<h3 mat-dialog-title>Are you sure you want to delete ?</h3>
     <!-- <mat-form-field>
       <mat-label>Favorite Animal</mat-label>
       <textarea  type="text"  matInput></textarea>
