--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -641,6 +641,13 @@ select {
 ::ng-deep [type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
     border: 2px solid #6b52f8;
 }
+.redBorder{
+    border: 2px solid red!important;
+}
+::ng-deep .red-snackbar {
+    background: #B00020!important;
+    color:white!important
+}
 /* .animatebox {
   transition: visibility 0s, opacity 0.5s linear;
   background: #5FCF80!important;
