--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,8 +36,8 @@
                 </mat-autocomplete>
               </div>
               <div class="form-group col-md-4 pr-1">
-                <label style="visibility: hidden;" class="label-class required ownHeading"></label>
-                <input type="text" formControlName="npc"  class="form-control" placeholder="NPC" [matAutocomplete]="npc"
+                <label class="label-class required ownHeading">Sub Devision</label>
+                <input type="text" formControlName="npc" [ngClass]="{'redBorder':(shiftInfoForm.controls.npc.touched && !shiftInfoForm.controls.npc.valid)}" class="form-control" placeholder="NPC" [matAutocomplete]="npc"
                   required>
                 <mat-autocomplete #npc="matAutocomplete">
                   <mat-option *ngFor="let npc of filteredNPC | async; let i= index" [value]="npc">
@@ -279,13 +279,13 @@
                 </td>
                 <td>
                   <div class="input-field col s12 m6 pl-0 groupInputSelect ownPoisitionRelative">
-                    <textarea  *ngIf="option[i]"  placeholder="Type here.." class="browser-default mergetextarea ownTextArea" style="min-height: 53px;"></textarea>
+                    <textarea formControlName="purpose" [ngClass]="{'redBorder':(schedule.controls.purpose.touched && !schedule.controls.purpose.valid)}" *ngIf="option[i]"  placeholder="Type here.." class="browser-default mergetextarea ownTextArea" style="min-height: 53px;"></textarea>
                     <select formControlName="purpose" (change)='onOptionSelected(i,purpose.selectedIndex,purposes)' [ngClass]="{'ownConditon':option[i]}"
                     [ngStyle]="{'height': option[i] ? '30px' : '38px'}"
                     [class.text-dimmed]="true" #purpose class="browser-default ">
                       <option [ngValue]="null"  disabled selected>Choose Purpose</option>
                       <option *ngFor="let p of purposes" [ngValue]="p">{{p}}</option>
-                      <option [ngValue]="">Other</option>
+                      <option [ngValue]="null">Other</option>
                     </select>
                   </div>
                 </td>
@@ -437,7 +437,7 @@
 
                 <div class="form-group mt-2">
                   <label class="headingFinal required ownHeading">Rank </label>
-                  <select class="browser-default" formControlName="rank">
+                  <select class="browser-default" [ngClass]="{'redBorder':(signatureForm.controls.rank.touched && !signatureForm.controls.rank.valid)}" formControlName="rank">
                     <option [ngValue]="null" disabled selected>Rank</option>
                     <option *ngFor="let r of ranks; let i= index" [ngValue]="r">{{r}}</option>
                   </select>
